<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, SplashActivity!</string>
    <string name="app_name">iMoBoard</string>
    <string name="app_name_prefs">iMoBoard Preferences</string>
    <string name="app_name_contacts">iMoBoard Contact List</string>
    <string name="app_sub_name">Maneuvering Board Application</string>
    <string name="app_platform_version_name">Version 1.1.0 for Android</string>
    <string name="copyright">Copyright © 2011 Spatial Industries, Inc.</string>
    <string name="web_site">http://www.spatialind.com/products/imoboard.html</string>
    <string name="support_email">support@spatialind.com</string>
    <string name="cardinal_north">N</string>
    <string name="cardinal_east">E</string>
    <string name="cardinal_south">S</string>
    <string name="cardinal_west">W</string>
    <string name="name_label">Name/ID: </string>
    <string name="contact_label">Contact</string>
    <string name="course_label">Course</string>
    <string name="speed_label">Speed</string>
    <string name="range_label">Range</string>
    <string name="bearing_label">Bearing</string>
    <string name="own_course_label">Own Ship Course</string>
    <string name="own_speed_label">Own Ship Speed</string>
    <string name="moboard_string">Maneuvering Board</string>
    <string name="mobo_contact_header">CONTACT DATA</string>
    <string name="mobo_cpa_header">CPA DATA</string>
    <string name="mobo_drm_label">DRM: </string>
    <string name="mobo_bearing_label">Bearing: </string>
    <string name="mobo_srm_label">SRM: </string>
    <string name="mobo_range_label">Range: </string>
    <string name="mobo_course_label">Course: </string>
    <string name="mobo_timeat_label">Time At: </string>
    <string name="mobo_speed_label">Speed: </string>
    <string name="mobo_timeto_label">Time To :</string>
    <string name="mobo_time_label">Time: </string>
    <string name="bearing_header">Bearing</string>
    <string name="range_header">Range</string>
    <string name="time_header">Time</string>
    <string name="unlicensed_text">This version of iMoBoard does not appear to have been purchased from the Android Market and isn\'t properly licensed. If you believe this condition to be in error, please contact our support staff via email at support@spatialind.com, or visit the product support website listed below.</string>
    <string name="confirm_clear_obs_message">All observation data for this contact will be deleted. Continue?</string>
    <string name="confirm_data_clear_caption">Confirm Data Clear</string>
    <string name="confirm_obs_delete_caption">Confirm Observation Delete</string>
    <string name="confirm_obs_delete_message">This observation will be deleted. Continue?</string>
    <string name="yes_string">Yes</string>
    <string name="no_string">No</string>
    <string name="update_own_ship_caption">Update Own Ship</string>
    <string name="add_obs_caption">Add Observation</string>
    <string name="edit_obs_caption">Edit Observation</string>
    <string name="scale_string">Scale</string>
    <string name="scale_pref_summary_string">Select scale for maneuvering board (each ring = 1K yds at 1:1)</string>
    <string name="select_scale_string">Select Scale</string>
    <string name="show_obs_time_string">Show Observation Time</string>
    <string name="show_obs_time_summary_string">Show the time of observation next to its associated point</string>
    <string name="show_degrees_string">Show Degrees</string>
    <string name="show_degrees_sumary_string">Show the degree values along the outer circumference of maneuvering board</string>
    <string name="show_cpa_string">Show CPA</string>
    <string name="show_cpa_summary_string">Show, and draw a track to, the CPA when a value is calculated</string>
    <string name="calculations_string">Calculations</string>
    <string name="round_values_string">Round Values</string>
    <string name="round_values_summary_string">Round all values to the nearest integer number</string>
    <string name="contact_data_source_string">Contact Data Source</string>
    <string name="contact_data_source_summary_string">Select contact observation data points to use</string>
    <string name="select_data_to_use_string">Select Data To Use</string>
    <string name="first_and_last_obs_string">First and last observations</string>
    <string name="two_most_recent_obs_string">Two most recent observations</string>
    <string name="add_string">Add</string>
    <string name="clear_string">Clear</string>
    <string name="pref_string">Preferences</string>
    <string name="info_string">Info</string>
    <string name="delete_obs_string">Delete Observation</string>
    <string name="clear_all_obs_string">Clear All Observations</string>
    <string name="own_ship_string">Own Ship</string>
    <string name="delete_contact_string">Delete Contact</string>
    <string name="clear_all_contacts_string">Clear All Contacts</string>
    <string name="tab_moboard_string">Man. Board</string>
    <string name="tab_los_string">Line of Sight</string>
    <string name="tab_obs_string">Observations</string>
    <string name="one_ring_string">1 Ring</string>
    <string name="license_error_string">License Error</string>
    <string name="licensed_string">Licensed</string>
    <string name="unlicensed_string">Unlicensed</string>
</resources>
