<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  	<TextView  
		android:id="@+id/titleTextView01"  
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/app_name"
		android:textSize="36dp"
		/>
	<TextView  
		android:id="@+id/titleTextView02"  
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/app_sub_name"
		android:textSize="18dp"
		/>
	<TextView  
		android:id="@+id/titleTextView03"  
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/app_platform_version_name"
		android:textSize="12dp"
		/>
	<TextView  
		android:id="@+id/infoTitleSpacer01"  
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="   "
		android:textSize="12dp"
		/>
	<ImageView android:id="@+id/dbBlackImage" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
  		android:gravity="center"
  		android:src="@drawable/moboard_app_icon" 
  		/>
  	<TextView  
		android:id="@+id/infoTitleSpacer02"  
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="   "
		android:textSize="12dp"
		/>
  	<TextView  
		android:id="@+id/companyTextView"  
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:gravity="left"
		android:text="@string/copyright"
		android:textSize="12dp"
		/>
	<TextView  
		android:id="@+id/webTextView"  
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:gravity="left"
		android:text="@string/web_site"
		android:textSize="12dp"
		/>
	<TextView  
		android:id="@+id/emailTextView"  
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:gravity="left"
		android:text="@string/support_email"
		android:textSize="12dp"
		/>
</LinearLayout>
