<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent">
	<TableLayout
		  android:id="@+id/observationTable"
		  android:orientation="horizontal"
		  android:gravity="center"
		  android:stretchColumns="*"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content">
		  <TableRow
		  		android:id="@+id/obsTableRow01"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical|center_horizontal">
		  	<TextView  
				android:id="@+id/obsTimeTextView"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="left"
				android:text="@string/course_label"
				android:textSize="16dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/obsBearingTextView"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/speed_label"
				android:textSize="16dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/obsRangeTextView"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="right"
				android:text="@string/range_label"
				android:textSize="16dp" 
				android:textColor="@color/lime"/>
		  </TableRow>
	</TableLayout>
</LinearLayout>