<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/moboLinearLayout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView  
		android:id="@+id/moboTextView"  
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/moboard_string"
		android:textSize="16dp" 
		android:textColor="@color/lime" />
	<TextView  
		android:id="@+id/spacerTextView"  
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text=""
		android:textSize="1dp" 
		android:textColor="@color/lime" />
	<com.spatialind.imoboard.ManeuveringBoardView
		android:id="@+id/moboView"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:gravity="center" />
	<TextView android:layout_height="0dip" 
          android:layout_width="fill_parent"
          android:layout_weight="1" />
	<TableLayout
		  android:id="@+id/moboardTable"
		  android:orientation="horizontal"
		  android:gravity="center"
		  android:stretchColumns="*"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content">
		  <TableRow
		  		android:id="@+id/moboardTableRow01"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical|center_horizontal">
		  	<TextView  
				android:id="@+id/contactHeader1TextView"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/mobo_contact_header"
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/moboRow01Spacer"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="         "
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/moboRow01Spacer2"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="   "
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/contactHeader2TextView"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/mobo_cpa_header"
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
		  </TableRow>
		  <TableRow
		  		android:id="@+id/moboTableRow02"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical|center_horizontal">
		  	<TextView  
				android:id="@+id/contactDrmLabel"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="left"
				android:text="@string/mobo_drm_label"
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/contactDrm"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="right"
				android:text=""
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/moboRow02Spacer"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="         "
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/cpaBearingLabel"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="left"
				android:text="@string/mobo_bearing_label"
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/cpaBearing"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="right"
				android:text=""
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
		  </TableRow>
		  <TableRow
		  		android:id="@+id/moboTableRow03"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical|center_horizontal">
		  	<TextView  
				android:id="@+id/contactSrmLabel"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="left"
				android:text="@string/mobo_srm_label"
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/contactSrm"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="right"
				android:text=""
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/moboRow03Spacer"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="         "
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/cpaRangeLabel"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="left"
				android:text="@string/mobo_range_label"
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/cpaRange"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="right"
				android:text=""
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
		  </TableRow>
		  <TableRow
		  		android:id="@+id/moboTableRow04"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical|center_horizontal">
		  	<TextView  
				android:id="@+id/contactCourseLabel"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="left"
				android:text="@string/mobo_course_label"
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/contactCourse"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="right"
				android:text=""
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/moboRow04Spacer"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="         "
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/cpaTimeAtLabel"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="left"
				android:text="@string/mobo_timeat_label"
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/cpaTimeAt"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="right"
				android:text=""
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
		  </TableRow>
		  <TableRow
		  		android:id="@+id/moboTableRow05"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical|center_horizontal">
		  	<TextView  
				android:id="@+id/contactSpeedLabel"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="left"
				android:text="@string/mobo_speed_label"
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/contactSpeed"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="right"
				android:text=""
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/moboRow05Spacer"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="         "
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/cpaTimeToLabel"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="left"
				android:text="@string/mobo_timeto_label"
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/cpaTimeTo"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="right"
				android:text=""
				android:textSize="14dp" 
				android:textColor="@color/lime"/>
		  </TableRow>
	</TableLayout>
</LinearLayout>