<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  	<TextView  
		android:id="@+id/targetTextView"  
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/contact_label"
		android:textSize="16dp" 
		android:textColor="@color/lime"/>
	<TableLayout
		  android:id="@+id/compassTable"
		  android:orientation="horizontal"
		  android:gravity="center"
		  android:stretchColumns="*"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content">
		  <TableRow
		  		android:id="@+id/tableRow01"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical|center_horizontal">
		  	<TextView  
				android:id="@+id/targetTextView3"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="left"
				android:text="@string/course_label"
				android:textSize="12dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/targetTextView4"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="right"
				android:text="@string/speed_label"
				android:textSize="12dp" 
				android:textColor="@color/lime"/>
		  </TableRow>
		  <TableRow
		  		android:id="@+id/tableRow02"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical|center_horizontal">
		  	<TextView  
				android:id="@+id/targetCourse"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="left"
				android:text="@string/course_label"
				android:textSize="12dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/targetSpeed"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="right"
				android:text="@string/speed_label"
				android:textSize="12dp" 
				android:textColor="@color/lime"/>
		  </TableRow>
	</TableLayout>
	
	<com.spatialind.imoboard.ShipCompassView
		android:id="@+id/targetView"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical|center_horizontal" />
	
	<TableLayout
		  android:id="@+id/bearingTable"
		  android:orientation="horizontal"
		  android:gravity="center"
		  android:stretchColumns="*"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content">
		  <TableRow
		  		android:id="@+id/tableRow03"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical|center_horizontal">
		  	<TextView  
				android:id="@+id/targetTextView3"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="left"
				android:text="@string/range_label"
				android:textSize="12dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/targetTextView4"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="right"
				android:text="@string/bearing_label"
				android:textSize="12dp" 
				android:textColor="@color/lime"/>
		  </TableRow>
		  <TableRow
		  		android:id="@+id/tableRow04"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical|center_horizontal">
		  	<TextView  
				android:id="@+id/targetRange"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="left"
				android:text="@string/range_label"
				android:textSize="12dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/targetBearing"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="right"
				android:text="@string/bearing_label"
				android:textSize="12dp" 
				android:textColor="@color/lime"/>
		  </TableRow>
	</TableLayout>
	
	<com.spatialind.imoboard.ShipCompassView
		android:id="@+id/ownShipView"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical|center_horizontal" />
	
	<TableLayout
		  android:id="@+id/compassTable"
		  android:orientation="horizontal"
		  android:gravity="center"
		  android:stretchColumns="*"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content">
		  <TableRow
		  		android:id="@+id/tableRow07"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical|center_horizontal">
		  	<TextView  
				android:id="@+id/targetTextView3"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="left"
				android:text="@string/own_course_label"
				android:textSize="12dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/targetTextView4"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="right"
				android:text="@string/own_speed_label"
				android:textSize="12dp" 
				android:textColor="@color/lime"/>
		  </TableRow>
		  <TableRow
		  		android:id="@+id/tableRow08"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical|center_horizontal">
		  	<TextView  
				android:id="@+id/losOwnCourse"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="left"
				android:text="@string/course_label"
				android:textSize="12dp" 
				android:textColor="@color/lime"/>
			<TextView  
				android:id="@+id/losOwnSpeed"  
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:gravity="right"
				android:text="@string/speed_label"
				android:textSize="12dp" 
				android:textColor="@color/lime"/>
		  </TableRow>
	</TableLayout>
</LinearLayout>
