<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/observationRoot"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
	 <TableLayout
		  android:id="@+id/compassTable"
		  android:orientation="horizontal"
		  android:gravity="center"
		  android:stretchColumns="*"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content">
		  <TableRow
		  		android:id="@+id/tableRow01"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical|center_horizontal">
			<TextView  	      
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:text="@string/mobo_bearing_label"
		    	/>
		    <EditText
				android:id="@+id/bearingText"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content"
			    android:maxLines="1"
			    android:maxLength="5"
			    android:digits="0123456789."
			    android:hint="045"
			    android:inputType="numberDecimal"
		    	/>
		 </TableRow>
		 <TableRow
		  		android:id="@+id/tableRow02"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical|center_horizontal">
			<TextView  	      
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:text="@string/mobo_range_label"
		    	/>
		    <EditText
				android:id="@+id/rangeText"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content"
			    android:maxLines="1"
			    android:maxLength="7"
			    android:digits="0123456789."
			    android:hint="12000"
			    android:inputType="numberDecimal"
		    	/>
		 </TableRow>
		 <TableRow
		  		android:id="@+id/tableRow03"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical|center_horizontal">
			<TextView  	      
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:text="@string/mobo_time_label"
		    	/>
			<TimePicker  	      
			    android:id="@+id/observationTimePicker"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content"
			    android:gravity="center"
		    	/>
		 </TableRow>
	 </TableLayout>
</LinearLayout>
